--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,26 @@
-# Node.js
+# Node modules
 node_modules/
+
+# Logs
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Environment files
 .env
-build/
+.env.local
+.env.*.local
+
+# Prisma
+/prisma/dev.db
+/prisma/dev.db-journal
+
+# Build output
+.vercel/
 dist/
-coverage/
+build/
+
+# Mac/OSX & system files
 .DS_Store
-*.log
-*.tgz
-.vscode/
+Thumbs.db
