--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 DATABASE_URL = postgresql://neondb_owner:npg_6MgovCWIB7lx@ep-quiet-shadow-adjtipm2-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-JWT_SECRET = NIRAJMOREaslkdjfaslkdfj
+JWT_SECRET = NIRAJMORE
